:sparkles: Add linked projects

--- a/web/styles/style.css
+++ b/web/styles/style.css
@@ -172,3 +172,11 @@ input:focus {
     margin: auto;
     vertical-align: middle;
 }
+
+.swal2-content * {
+    user-select: text;
+}
+
+.swal2-popup {
+    font-size: 1.6rem !important;
+  }
