:lipstick: Add icon

--- a/Frontends/web/styles/style.css
+++ b/Frontends/web/styles/style.css
@@ -18,6 +18,11 @@ header {
     padding-right: 0px;
 }
 
+.icon {
+    width: 30px;
+    height: 30px;
+    margin-right: 10px;
+}
 
 header * {
     display: inline;
