:lipstick: UI Fixes for docs

--- a/Frontends/web/styles/style.css
+++ b/Frontends/web/styles/style.css
@@ -280,3 +280,7 @@ footer {
 .arrowToggle label #isNewWillBeSelected:checked~* .selectedText {
    font-weight: bold;
 }
+
+.hoverDoc * {
+    color: white !important;
+}
