:sparkles: Add check for update and changelog for web

--- a/Frontends/web/styles/style.css
+++ b/Frontends/web/styles/style.css
@@ -385,5 +385,10 @@ footer {
   }
 
 .swal2-container * {
-    user-select: auto;
+    user-select: text;
+    list-style-position: inside;
+}
+
+.swal2-container .left * {
+    text-align: left;
 }
