:sparkles: Add multi-user support to frontend

--- a/frontends/web/styles/style.css
+++ b/frontends/web/styles/style.css
@@ -35,7 +35,7 @@ header {
     margin-right: 10px;
 }
 
-header > * {
+header>* {
     display: inline;
 }
 
@@ -51,7 +51,7 @@ h1 {
     margin-top: 1.5rem;
 }
 
-.buttons > * {
+.buttons>* {
     margin-right: 6px;
 }
 
@@ -122,7 +122,7 @@ body {
     width: 20px;
 }
 
-.tabs .divider.dragover { 
+.tabs .divider.dragover {
     filter: brightness(50%);
 }
 
@@ -221,7 +221,7 @@ footer {
     display: flex;
 }
 
-footer > * {
+footer>* {
     width: 33%;
     flex-grow: 1;
 }
@@ -231,12 +231,12 @@ footer > * {
     text-decoration: none;
 }
 
-.github_link > span {
-    padding-right: 0.75rem;  
+.github_link>span {
+    padding-right: 0.75rem;
 }
 
 .center {
-    display: inline-flex; 
+    display: inline-flex;
     align-items: center;
     justify-content: center;
 }
@@ -264,9 +264,9 @@ footer > * {
     pointer-events: all;
 }
 
-.toggle-wrapper-wrapper > * {
+.toggle-wrapper-wrapper>* {
     display: inline-block;
-    vertical-align:middle;
+    vertical-align: middle;
 }
 
 .arrowToggle label .toggle-wrapper {
@@ -318,13 +318,14 @@ footer > * {
     color: transparent;
     overflow: hidden;
     visibility: hidden;
-  }
+}
 
 .arrowToggle label #isNewWillBeSelected:not(:checked)~* .notSelectedText {
     font-weight: bold;
- }
+}
+
 .arrowToggle label #isNewWillBeSelected:checked~* .selectedText {
-   font-weight: bold;
+    font-weight: bold;
 }
 
 .hoverDoc * {
@@ -339,12 +340,12 @@ footer > * {
 .material-list {
     list-style-type: none;
     padding: 0;
-  }
+}
 
 .material-list * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;      
+    box-sizing: border-box;
 }
 
 /* Style for each list item */
@@ -357,10 +358,10 @@ footer > * {
     border-radius: 4px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
-  }
-  
-  /* Icon style */
-  .material-icon {
+}
+
+/* Icon style */
+.material-icon {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -369,22 +370,22 @@ footer > * {
     border-radius: 50%;
     overflow: hidden;
     margin-right: 20px;
-  }
-  
-  .material-icon svg {
+}
+
+.material-icon svg {
     width: 100%;
     height: 100%;
-  }
-  
-  /* Title style */
-  .material-title {
+}
+
+/* Title style */
+.material-title {
     flex: 1;
     text-align: left;
     /* Adjust font size, color, etc. as needed */
-  }
-  
-  /* Button style */
-  .material-btn {
+}
+
+/* Button style */
+.material-btn {
     padding: 8px 16px;
     border: none;
     color: white;
@@ -392,18 +393,20 @@ footer > * {
     cursor: pointer;
     transition: background-color 0.3s ease;
     margin-left: 10px;
-  }
-  
-  /* Button hover effect */
-  .material-btn:hover {
+}
+
+/* Button hover effect */
+.material-btn:hover {
     filter: brightness(90%);
-  }
-  /* Divider style */
+}
+
+/* Divider style */
 .material-divider {
     border: none;
-    border-top: 3px solid #999; /* Divider line color */
+    border-top: 3px solid #999;
+    /* Divider line color */
     margin: 20px 0;
-  }
+}
 
 .swal2-container * {
     user-select: text;
